add Example Acitivty

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -40,5 +40,23 @@
         android:layout_below="@+id/button2"
         android:layout_marginTop="16dp"
         android:text="페이스북API" />
+    
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/button3"
+        android:layout_below="@+id/button3"
+        android:layout_marginTop="16dp"
+        android:text="DataBase" />
+    
+    <Button
+        android:id="@+id/button5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/button4"
+        android:layout_below="@+id/button4"
+        android:layout_marginTop="16dp"
+        android:text="Activity" />
 
 </RelativeLayout>
